--- a/style.css
+++ b/style.css
@@ -82,3 +82,36 @@ p {
 	padding: 25px;
 	border-radius: 10%;
 }
+
+.social-counter {
+	width: 90%;
+	float: left;
+	box-shadow: 5px 7px 40px gray;
+	border-radius: 15px;
+	display: flex;
+	margin: 60px 0px 0px 5%;
+}
+
+.social-item {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+footer {
+	background: black;
+	padding-bottom: 150px;
+	overflow: hidden;
+	width: 90%;
+	height: 50px;
+	margin: 27% 0 0 5%;
+}
+
+footer h1{
+    color: white;
+	text-align: center;
+}
+
+footer p{
+    text-align: center;
+}
+
