--- a/style.css
+++ b/style.css
@@ -13,6 +13,32 @@ section{
 	padding-left: 2%;
 }
 
+.header-top {
+	max-height: 40px;
+}
+.main-menu {
+	float: right;
+	margin: 53px;
+}
+
+.main-menu ul li{
+	display: inline-block;
+	padding: 10px;
+}
+
+.main-menu ul li a {
+	text-decoration: none;
+	padding: 8px 18px;
+	border-radius: 14px;
+}
+
+.home{
+	background-image: linear-gradient(orange , cyan);
+}
+.main-menu ul li a:hover{
+	background-image: linear-gradient(orange , cyan);
+}
+
 .common-btn {
 	text-decoration: none;
 	font-size: 25px;
@@ -114,4 +140,3 @@ footer h1{
 footer p{
     text-align: center;
 }
-
